Deleted html table that wasn't rendering

--- a/Linear Regression Nonlinear Transformations.ipynb
+++ b/Linear Regression Nonlinear Transformations.ipynb
@@ -793,12 +793,7 @@
     "* Achieve a more linear relationship\n",
     "* Make distribution more normal\n",
     "* Make variance more constant\n",
-    "* Better fit a model - increase $R^{2}$\n",
-    "\n",
-    "|        | Y                                                                                                                                                        | log(Y)                                                                                                                                                  |\n",
-    "|--------|----------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
-    "| **X**      | Model A: Linear-Linear model $$Y = b_{0} + b_{1}*X$$  As *X* increases by 1 unit, *Y* changes by $b_{1}$ units, holding all other variables constant     | Model C: Log-Linear model $$log(Y) = b_{0} + b_{1}*X$$  As *X* increases by 1 unit, *Y* changes by $(b_{1}*100)$%, holding all other variables constant |\n",
-    "| **log(X)** | Model B: Linear-Log model $$Y = b_{0} + b_{1}*log(X)$$  As *X* increases by 1%, *Y* changes by $\\frac{b_{1}}{100}$, holding all other variables constant | Model D: Log-Log model $$log(Y) = b_{0} + b_{1}*log(X)$$  As *X* increases by 1%, *Y* changes by $b_{1}$%, holding all other variables constant         |"
+    "* Better fit a model - increase $R^{2}$"
    ]
   },
   {
